bigger font and create new blog

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,6 +6,6 @@
 	<ul>
 		<li><a href="/">Blogs</a></li>
 		<li><a href="/about">About</a></li>
-		<li><a href="/blogs/create">Create your new blog</a></li>
+		<li><a href="/blogs/create">Create a new blog</a></li>
 	</ul>
 </nav>
