--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,21 +1,25 @@
 <html lang="en">
-<%- include("./partials/head.ejs") %>
+	<%- include("./partials/head.ejs") %>
 
-<body>
-  <%- include("./partials/nav.ejs") %>
+	<body>
+		<%- include("./partials/nav.ejs") %>
 
-  <div class="create-blog content">
-    <form action="/blogs" method="POST">
-      <label for="title">Blog title:</label>
-      <input type="text" id="title" name="title" required>
-      <label for="snippet">Blog snippet:</label>
-      <input type="text" id="snippet" name="snippet" required>
-      <label for="body">Blog body:</label>
-      <textarea id="body" name="body" required></textarea>
-      <button>Submit</button>
-    </form>
-  </div>
+		<div class="create-blog content">
+			<form action="/blogs" method="POST">
+				Limit: 1 blog / 20 seconds
+				<label for="title">Blog title:</label>
+				<input type="text" id="title" name="title" required />
+				<label for="snippet">Blog snippet:</label>
+				<input type="text" id="snippet" name="snippet" required />
+				<label for="body">Blog body:</label>
+				<textarea id="body" name="body" required></textarea>
+				<button>Submit</button>
+        <div id='limit'>
+            <%=  limit %>
+        </div>
+			</form>
+		</div>
 
-  <%- include("./partials/footer.ejs") %>
-</body>
+		<%- include("./partials/footer.ejs") %>
+	</body>
 </html>
