--- a/public/styles.css
+++ b/public/styles.css
@@ -1,1 +1,45 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+@font-face {
+  font-family: Biko;
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/biko-black.woff");
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body #mask {
+  font-family: Biko, sans-serif;
+  background-color: white;
+  width: 100%;
+  min-height: 100vh;
+  color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 150px;
+  mix-blend-mode: screen;
+}
+
+body #mask h1 {
+  line-height: 80%;
+  margin: 0;
+}
+
+body header video {
+  height: 100vh;
+  position: fixed;
+}
+/*# sourceMappingURL=styles.css.map */
