--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,25 +1,19 @@
-<nav>
-	<header>
-		<video autoplay playsinline muted loop preload poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/oceanshot.jpg">
-			<source src="https://media.istockphoto.com/videos/two-women-on-paddle-board-in-lagoon-video-id1201939801" />
-		</video>
-		<div id='mask'>
-			<h1>LOVE</h1>
-			<h1>LEISURE</h1>
-			<h1>LIFE</h1>
-		</div>
-
-	</header>
-	<div class="site-title">
-		<div>
-			
-			<div>Andrew's</div>
-			<div>Blogs</div>
-		</div>
+<header>
+	<video autoplay playsinline muted loop preload poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/oceanshot.jpg">
+		<source src="https://media.istockphoto.com/videos/two-women-on-paddle-board-in-lagoon-video-id1201939801" />
+	</video>
+	<div id='mask'>
+		<h1>LOVE</h1>
+		<h1>LEISURE</h1>
+		<h1>LIFE</h1>
 	</div>
-	<ul>
-		<li><a href="/">Blogs</a></li>
-		<li><a href="/about">About</a></li>
-		<li><a href="/blogs/create">Create a new blog</a></li>
-	</ul>
+</header>
+<nav>
+	<div id="navBar">
+		<ul>
+			<li><a href="/">Blogs</a></li>
+			<li><a href="/about">About</a></li>
+			<li><a href="/blogs/create">Create Blog</a></li>
+		</ul>
+	</div>
 </nav>
