--- a/public/styles.css
+++ b/public/styles.css
@@ -3,18 +3,25 @@
   src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/biko-black.woff");
 }
 
-body {
+* {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  text-decoration: none;
+  color: black;
+}
+
+body video {
+  height: 100vh;
+  position: fixed;
+  z-index: -1;
 }
 
 body #mask {
-  font-family: Biko, sans-serif;
   background-color: white;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -29,17 +36,47 @@ body #mask {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 150px;
+  font-size: 120px;
   mix-blend-mode: screen;
 }
 
 body #mask h1 {
+  font-family: Biko, sans-serif;
   line-height: 80%;
   margin: 0;
 }
 
-body header video {
-  height: 100vh;
-  position: fixed;
+body #navBar {
+  background: #6d6d6d;
+  mix-blend-mode: screen;
+  font-size: 50px;
+  font-family: "Century Gothic", "Lato", sans-serif;
+  position: sticky;
+  position: -webkit-sticky;
+  /* Safari */
+  top: 0;
+}
+
+body #navBar ul {
+  margin: 0;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body #navBar ul li {
+  list-style-type: none;
+}
+
+body #navBar ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+body .blogs {
+  background: white;
 }
 /*# sourceMappingURL=styles.css.map */
