--- a/public/styles.scss
+++ b/public/styles.scss
@@ -122,30 +122,58 @@
 	font-family: Biko;
 	src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/biko-black.woff");
 }
-body {
-	// background: linear-gradient(orange, yellow);
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	text-decoration: none;
+	color: black;
+}
+body {
+	video {
+		height: 100vh;
+		position: fixed;
+		z-index: -1;
+	}
 	#mask {
-		font-family: Biko, sans-serif;
-		background-color: white;
+		background-color: rgb(255, 255, 255);
 		width: 100%;
-		min-height: 100vh;
+		height: 100vh;
 		color: black;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		font-size: 150px;
+		font-size: 120px;
 		mix-blend-mode: screen;
 		h1 {
+			font-family: Biko, sans-serif;
 			line-height: 80%;
 			margin: 0;
 		}
 	}
-	header video {
-		height: 100vh;
-		position: fixed;
+	#navBar {
+		background: rgb(109, 109, 109);
+		mix-blend-mode: screen;
+		font-size: 50px;
+		font-family: "Century Gothic", "Lato", sans-serif;
+		position: sticky;
+		position: -webkit-sticky; /* Safari */
+		top: 0;
+		ul {
+			margin: 0;
+			justify-content: space-evenly;
+			display: flex;
+			li {
+				list-style-type: none;
+				a {
+					text-decoration: none;
+					color: white;
+				}
+			}
+		}
+	}
+	.blogs {
+		background: rgb(255, 255, 255);
 	}
 }
