--- a/public/styles.css
+++ b/public/styles.css
@@ -12,13 +12,22 @@
   color: black;
 }
 
-body video {
+body header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body header video {
   height: 100vh;
   position: fixed;
   z-index: -1;
 }
 
-body #mask {
+body header #mask {
   background-color: white;
   width: 100%;
   height: 100vh;
@@ -36,44 +45,62 @@ body #mask {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 120px;
+  font-size: 100px;
   mix-blend-mode: screen;
 }
 
-body #mask h1 {
+body header #mask h1 {
   font-family: Biko, sans-serif;
   line-height: 80%;
   margin: 0;
 }
 
 body #navBar {
-  background: #6d6d6d;
-  mix-blend-mode: screen;
-  font-size: 50px;
+  background: white;
+  font-size: 40px;
   font-family: "Century Gothic", "Lato", sans-serif;
-  position: sticky;
-  position: -webkit-sticky;
-  /* Safari */
-  top: 0;
 }
 
 body #navBar ul {
   margin: 0;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 body #navBar ul li {
+  text-align: center;
+  width: 200px;
   list-style-type: none;
+}
+
+body #navBar ul li :hover {
+  background: #338033;
+  cursor: pointer;
+}
+
+body #navBar ul li :hover:before {
+  -webkit-transform: translateX(300px) skewX(-15deg);
+          transform: translateX(300px) skewX(-15deg);
+  opacity: 0.6;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
+}
+
+body #navBar ul li :hover:after {
+  -webkit-transform: translateX(300px) skewX(-15deg);
+          transform: translateX(300px) skewX(-15deg);
+  opacity: 1;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
 }
 
 body #navBar ul li a {
   text-decoration: none;
-  color: white;
+  color: #586464;
 }
 
 body .blogs {
