--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,7 +13,7 @@
 		<ul>
 			<li><a href="/">Blogs</a></li>
 			<li><a href="/about">About</a></li>
-			<li><a href="/blogs/create">Create Blog</a></li>
+			<li><a href="/blogs/create">Create</a></li>
 		</ul>
 	</div>
 </nav>
