--- a/public/styles.css
+++ b/public/styles.css
@@ -53,6 +53,12 @@ body header #mask h1 {
   font-family: Biko, sans-serif;
   line-height: 80%;
   margin: 0;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+body header #mask h1:hover {
+  color: #535353;
 }
 
 body #navBar {
@@ -73,16 +79,58 @@ body #navBar ul {
 
 body #navBar ul li {
   text-align: center;
+  padding: 5px;
   width: 200px;
   list-style-type: none;
+  position: relative;
+  border-radius: 5px;
+  -webkit-transition: background 0.2s ease-in-out;
+  transition: background 0.2s ease-in-out;
+  overflow: hidden;
 }
 
-body #navBar ul li :hover {
-  background: #338033;
+body #navBar ul li a {
+  color: #404948;
+}
+
+body #navBar ul li:before {
+  content: "";
+  display: block;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.5);
+  width: 60px;
+  height: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0.5;
+  -webkit-filter: blur(30px);
+          filter: blur(30px);
+  -webkit-transform: translateX(-100px) skewX(-15deg);
+          transform: translateX(-100px) skewX(-15deg);
+}
+
+body #navBar ul li:after {
+  content: "";
+  display: block;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.2);
+  width: 30px;
+  height: 100%;
+  left: 30px;
+  top: 0;
+  opacity: 0;
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
+  -webkit-transform: translateX(-100px) skewX(-15deg);
+          transform: translateX(-100px) skewX(-15deg);
+}
+
+body #navBar ul li:hover {
+  background: #5a8f8a;
   cursor: pointer;
 }
 
-body #navBar ul li :hover:before {
+body #navBar ul li:hover:before {
   -webkit-transform: translateX(300px) skewX(-15deg);
           transform: translateX(300px) skewX(-15deg);
   opacity: 0.6;
@@ -90,17 +138,12 @@ body #navBar ul li :hover:before {
   transition: 0.7s;
 }
 
-body #navBar ul li :hover:after {
+body #navBar ul li:hover:after {
   -webkit-transform: translateX(300px) skewX(-15deg);
           transform: translateX(300px) skewX(-15deg);
   opacity: 1;
   -webkit-transition: 0.7s;
   transition: 0.7s;
-}
-
-body #navBar ul li a {
-  text-decoration: none;
-  color: #586464;
 }
 
 body .blogs {
