title and snippet good

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,9 +11,9 @@
 <nav>
 	<div id="navBar">
 		<ul>
-			<li><a href="/">Blogs</a></li>
-			<li><a href="/about">About</a></li>
-			<li><a href="/blogs/create">Create</a></li>
+			<a href="/"><li>Blogs</li></a>
+			<a href="/about"><li>About</li></a>
+			<a href="/blogs/create"><li>Create</li></a>
 		</ul>
 	</div>
 </nav>
