--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,10 @@
   color: black;
 }
 
+body {
+  width: 100vw;
+}
+
 body header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -29,8 +33,8 @@ body header video {
 
 body header #mask {
   background-color: white;
-  width: 100%;
   height: 100vh;
+  width: 100vw;
   color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -77,7 +81,8 @@ body #navBar ul {
   display: flex;
 }
 
-body #navBar ul li {
+body #navBar ul a li {
+  color: #384241;
   text-align: center;
   padding: 5px;
   width: 200px;
@@ -89,11 +94,7 @@ body #navBar ul li {
   overflow: hidden;
 }
 
-body #navBar ul li a {
-  color: #404948;
-}
-
-body #navBar ul li:before {
+body #navBar ul a li:before {
   content: "";
   display: block;
   position: absolute;
@@ -109,7 +110,7 @@ body #navBar ul li:before {
           transform: translateX(-100px) skewX(-15deg);
 }
 
-body #navBar ul li:after {
+body #navBar ul a li:after {
   content: "";
   display: block;
   position: absolute;
@@ -125,12 +126,12 @@ body #navBar ul li:after {
           transform: translateX(-100px) skewX(-15deg);
 }
 
-body #navBar ul li:hover {
+body #navBar ul a li:hover {
   background: #5a8f8a;
   cursor: pointer;
 }
 
-body #navBar ul li:hover:before {
+body #navBar ul a li:hover:before {
   -webkit-transform: translateX(300px) skewX(-15deg);
           transform: translateX(300px) skewX(-15deg);
   opacity: 0.6;
@@ -138,7 +139,7 @@ body #navBar ul li:hover:before {
   transition: 0.7s;
 }
 
-body #navBar ul li:hover:after {
+body #navBar ul a li:hover:after {
   -webkit-transform: translateX(300px) skewX(-15deg);
           transform: translateX(300px) skewX(-15deg);
   opacity: 1;
@@ -148,5 +149,33 @@ body #navBar ul li:hover:after {
 
 body .blogs {
   background: white;
+}
+
+body .blogs .blog {
+  position: relative;
+}
+
+body .blogs .blog video {
+  width: 100vw;
+  -webkit-filter: brightness(80%);
+          filter: brightness(80%);
+}
+
+body .blogs .blog a .titleSnip {
+  position: absolute;
+  overflow: hidden;
+  height: 40%;
+  top: 33%;
+  width: 100vw;
+  padding: 3%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+body .blogs .blog a .titleSnip * {
+  font-family: "Century Gothic", "Lato", sans-serif;
+  font-size: 30px;
+  color: white;
+  opacity: 0.9;
 }
 /*# sourceMappingURL=styles.css.map */
