--- a/public/styles.scss
+++ b/public/styles.scss
@@ -130,6 +130,7 @@
 	color: black;
 }
 body {
+	width: 100vw;
 	header {
 		display: flex;
 		justify-content: center;
@@ -140,8 +141,8 @@ body {
 		}
 		#mask {
 			background-color: rgb(255, 255, 255);
-			width: 100%;
 			height: 100vh;
+			width: 100vw;
 			color: black;
 			display: flex;
 			flex-direction: column;
@@ -162,65 +163,62 @@ body {
 	}
 	#navBar {
 		background: rgb(255, 255, 255);
-		// mix-blend-mode: screen;
 		font-size: 40px;
 		font-family: "Century Gothic", "Lato", sans-serif;
 		ul {
 			margin: 0;
 			justify-content: center;
 			display: flex;
-			li {
-				text-align: center;
-				padding: 5px;
-				width: 200px;
-				list-style-type: none;
-				position: relative;
-				border-radius: 5px;
-				transition: background 0.2s ease-in-out;
-				overflow: hidden;
-				a {
-					color: rgb(64, 73, 72);
-				}
-				&:before {
-					// pointer-events: none;
-					content: "";
-					display: block;
-					position: absolute;
-					background: rgba(255, 255, 255, 0.5);
-					width: 60px;
-					height: 100%;
-					left: 0;
-					top: 0;
-					opacity: 0.5;
-					filter: blur(30px);
-					transform: translateX(-100px) skewX(-15deg);
-				}
-				&:after {
-					// pointer-events: none;
-					content: "";
-					display: block;
-					position: absolute;
-					background: rgba(255, 255, 255, 0.2);
-					width: 30px;
-					height: 100%;
-					left: 30px;
-					top: 0;
-					opacity: 0;
-					filter: blur(5px);
-					transform: translateX(-100px) skewX(-15deg);
-				}
-				&:hover {
-					background: #5a8f8a;
-					cursor: pointer;
+			a {
+				li {
+					color: rgb(56, 66, 65);
+					text-align: center;
+					padding: 5px;
+					width: 200px;
+					list-style-type: none;
+					position: relative;
+					border-radius: 5px;
+					transition: background 0.2s ease-in-out;
+					overflow: hidden;
 					&:before {
-						transform: translateX(300px) skewX(-15deg);
-						opacity: 0.6;
-						transition: 0.7s;
+						content: "";
+						display: block;
+						position: absolute;
+						background: rgba(255, 255, 255, 0.5);
+						width: 60px;
+						height: 100%;
+						left: 0;
+						top: 0;
+						opacity: 0.5;
+						filter: blur(30px);
+						transform: translateX(-100px) skewX(-15deg);
 					}
 					&:after {
-						transform: translateX(300px) skewX(-15deg);
-						opacity: 1;
-						transition: 0.7s;
+						content: "";
+						display: block;
+						position: absolute;
+						background: rgba(255, 255, 255, 0.2);
+						width: 30px;
+						height: 100%;
+						left: 30px;
+						top: 0;
+						opacity: 0;
+						filter: blur(5px);
+						transform: translateX(-100px) skewX(-15deg);
+					}
+					&:hover {
+						background: #5a8f8a;
+						cursor: pointer;
+						&:before {
+							transform: translateX(300px) skewX(-15deg);
+							opacity: 0.6;
+							transition: 0.7s;
+						}
+						&:after {
+							transform: translateX(300px) skewX(-15deg);
+							opacity: 1;
+							transition: 0.7s;
+						}
 					}
 				}
 			}
@@ -228,5 +226,30 @@ body {
 	}
 	.blogs {
 		background: rgb(255, 255, 255);
+		.blog {
+			position: relative;
+			video {
+				width: 100vw;
+				filter: brightness(80%);
+			}
+			a {
+				.titleSnip {
+					position: absolute;
+					overflow: hidden;
+					height: 40%;
+					top: 33%;
+					width: 100vw;
+					padding: 3%;
+					text-align: center;
+					background-color: rgba(0, 0, 0, 0.2);
+					* {
+						font-family: "Century Gothic", "Lato", sans-serif;
+						font-size: 30px;
+						color: white;
+						opacity: 0.9;
+					}
+				}
+			}
+		}
 	}
 }
