--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,21 @@
 	<%- include("./partials/head.ejs") %>
 	<body>
 		<%- include("./partials/nav.ejs") %>
-		<div class="blogs content">
-			<h2>All Blogs</h2>
-
+		<div class="blogs">
 			<% if (blogs.length > 0) { %> <% blogs.forEach(blog => { %>
-			<a class="single" href="/blogs/<%= blog._id %>">
-				<h3 class="title"><%= blog.title %></h3>
-				<p class="snippet"><%= blog.snippet %></p>
-			</a>
+				<div class='blog'>
+					<video autoplay playsinline muted loop preload poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/oceanshot.jpg">
+						<source src="https://s3.us-west-1.amazonaws.com/blogs.anhonestobserver.com/142073_playlist.mp4" />
+					</video>
+					<a href="/blogs/<%= blog._id %>">
+						<div class='titleSnip'>
+							<h3 class="title"><%= blog.title %></h3>
+							<p class="snippet"><%= blog.snippet %></p>
+						</div>
+					</a>
+
+						
+				</div>
 			<% }) %> <% } else { %>
 			<p>There are no blogs to display...</p>
 			<% } %>
