--- a/public/styles.css
+++ b/public/styles.css
@@ -66,8 +66,12 @@ body header #mask h1:hover {
 }
 
 body #navBar {
-  background: white;
-  font-size: 40px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  z-index: 1;
+  background: #222422;
+  font-size: 30px;
   font-family: "Century Gothic", "Lato", sans-serif;
 }
 
@@ -82,13 +86,13 @@ body #navBar ul {
 }
 
 body #navBar ul a li {
-  color: #384241;
+  color: #758583;
   text-align: center;
   padding: 5px;
   width: 200px;
   list-style-type: none;
-  position: relative;
   border-radius: 5px;
+  position: relative;
   -webkit-transition: background 0.2s ease-in-out;
   transition: background 0.2s ease-in-out;
   overflow: hidden;
@@ -127,7 +131,7 @@ body #navBar ul a li:after {
 }
 
 body #navBar ul a li:hover {
-  background: #5a8f8a;
+  background: #213533;
   cursor: pointer;
 }
 
@@ -170,12 +174,68 @@ body .blogs .blog a .titleSnip {
   padding: 3%;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.2);
+  -webkit-transition: background 0.4s ease-in-out;
+  transition: background 0.4s ease-in-out;
+  overflow: hidden;
+}
+
+body .blogs .blog a .titleSnip:before {
+  content: "";
+  display: block;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.5);
+  width: 60px;
+  height: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0.5;
+  -webkit-filter: blur(30px);
+          filter: blur(30px);
+  -webkit-transform: translateX(-100px) skewX(-15deg);
+          transform: translateX(-100px) skewX(-15deg);
+}
+
+body .blogs .blog a .titleSnip:after {
+  content: "";
+  display: block;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.2);
+  width: 30px;
+  height: 100%;
+  left: 30px;
+  top: 0;
+  opacity: 0;
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
+  -webkit-transform: translateX(-100px) skewX(-15deg);
+          transform: translateX(-100px) skewX(-15deg);
+}
+
+body .blogs .blog a .titleSnip:hover {
+  cursor: pointer;
+}
+
+body .blogs .blog a .titleSnip:hover:before {
+  -webkit-transform: translateX(120vw) skewX(-15deg);
+          transform: translateX(120vw) skewX(-15deg);
+  opacity: 0.6;
+  -webkit-transition: 1.2s;
+  transition: 1.2s;
+}
+
+body .blogs .blog a .titleSnip:hover:after {
+  -webkit-transform: translateX(120vw) skewX(-15deg);
+          transform: translateX(120vw) skewX(-15deg);
+  opacity: 1;
+  -webkit-transition: 1.2s;
+  transition: 1.2s;
 }
 
 body .blogs .blog a .titleSnip * {
+  margin: 5px;
   font-family: "Century Gothic", "Lato", sans-serif;
   font-size: 24px;
   color: white;
-  opacity: 0.9;
+  text-shadow: 0px 6px 6px black;
 }
 /*# sourceMappingURL=styles.css.map */
