--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,5 +3,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="/styles.css" />
 	<title>Andrew's Blogs | <%= title %></title>
-	<script type="text/javascript" src="https://livejs.com/live.js"></script>
+	<script type="text/javascript" src="https://livejs.com/live.js">
+		console.log(`hello`)
+		
+	</script>
 </head>
