before the down arrow

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,18 @@
 	<body>
 		<%- include("./partials/nav.ejs") %>
 		<div class="blogs">
-			<% if (blogs.length > 0) { %> <% blogs.forEach(blog => { %>
+			<% if (blogs.length > 0) { %> <% blogs.forEach((blog,index,array) => { %>
 				<div class='blog'>
+					<% if (index!=0){ %>
+						<div class="arrowUp">
+							<a class="arrow-up">
+								<span class="left-arm"></span>
+								<span class="right-arm"></span>
+								<span class="arrow-slide"></span>
+							</a>
+	
+						</div>
+					<% } %>
 					<video autoplay playsinline muted loop preload poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/oceanshot.jpg">
 						<source src="<%= blog.videoURL %>" />
 					</video>
@@ -14,6 +24,15 @@
 							<p class="snippet"><%= blog.snippet.length < 300 ? blog.snippet : blog.snippet.substr(0,300)+'...read more'  %></p>
 						</div>
 					</a>
+					<% if (index!=array.length-1){ %>
+						<div class="arrowDown">
+							<a class="arrow-up">
+								<span class="left-arm"></span>
+								<span class="right-arm"></span>
+								<span class="arrow-slide"></span>
+							</a>
+						</div>
+					<% } %>
 				</div>
 			<% }) %> <% } else { %>
 			<p>There are no blogs to display...</p>
