--- a/public/styles.css
+++ b/public/styles.css
@@ -92,6 +92,8 @@
 
 body {
   width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 body .splash {
@@ -99,8 +101,8 @@ body .splash {
           animation-name: zIndex2-1;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
-  -webkit-animation-delay: 17s;
-          animation-delay: 17s;
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
   -webkit-animation-duration: 0s;
           animation-duration: 0s;
   height: 100vh;
@@ -133,8 +135,8 @@ body .splash video {
   z-index: 2;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
-  -webkit-animation-delay: 13s;
-          animation-delay: 13s;
+  -webkit-animation-delay: 9s;
+          animation-delay: 9s;
   -webkit-animation-name: opacityToZero;
           animation-name: opacityToZero;
   -webkit-animation-duration: 0s;
@@ -146,8 +148,8 @@ body .splash #mask {
   background-color: white;
   -webkit-animation-name: opacityToZero;
           animation-name: opacityToZero;
-  -webkit-animation-delay: 13s;
-          animation-delay: 13s;
+  -webkit-animation-delay: 9s;
+          animation-delay: 9s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
   -webkit-animation-duration: 0s;
@@ -195,10 +197,10 @@ body .splash .white {
   mix-blend-mode: screen;
   -webkit-animation-name: white2black, black2white, opacityToZero;
           animation-name: white2black, black2white, opacityToZero;
-  -webkit-animation-duration: 4s, 4s, 4s;
-          animation-duration: 4s, 4s, 4s;
-  -webkit-animation-delay: 2s, 9s, 13s;
-          animation-delay: 2s, 9s, 13s;
+  -webkit-animation-duration: 3s, 3s, 3s;
+          animation-duration: 3s, 3s, 3s;
+  -webkit-animation-delay: 1s, 6s, 9s;
+          animation-delay: 1s, 6s, 9s;
   -webkit-animation-fill-mode: forwards, forwards;
           animation-fill-mode: forwards, forwards;
 }
@@ -209,6 +211,7 @@ body #navBar {
   top: 0px;
   z-index: 1;
   background: #222422;
+  height: 0%;
   font-size: 30px;
   font-family: "Century Gothic", "Lato", sans-serif;
 }
@@ -224,6 +227,7 @@ body #navBar ul {
 }
 
 body #navBar ul a li {
+  text-shadow: 0px 3px 3px black;
   color: #9eacaa;
   text-align: center;
   padding: 5px;
@@ -269,7 +273,8 @@ body #navBar ul a li:after {
 }
 
 body #navBar ul a li:hover {
-  background: #385a3e;
+  text-shadow: none;
+  background: #455047;
   cursor: pointer;
 }
 
@@ -300,12 +305,235 @@ body .blogs .blog {
   scroll-snap-align: start;
   background: black;
   position: relative;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
   height: 100vh;
 }
 
-body .blogs .blog video {
+body .blogs .blog .arrowUp {
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
   position: relative;
-  top: 50%;
+}
+
+body .blogs .blog .arrowUp .arrow-up {
+  height: 40px;
+  width: 40px;
+  display: block;
+  border: 1px solid #666;
+  position: relative;
+  cursor: pointer;
+  -webkit-transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  overflow: hidden;
+}
+
+body .blogs .blog .arrowUp .arrow-slide {
+  left: 0;
+  top: -100%;
+  width: 100%;
+  height: 100%;
+  background: #666;
+  position: absolute;
+  display: block;
+  z-index: 0;
+}
+
+body .blogs .blog .arrowUp .left-arm {
+  position: absolute;
+  z-index: 1;
+  background-color: transparent;
+  top: 19px;
+  left: 3px;
+  width: 20px;
+  display: block;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+body .blogs .blog .arrowUp .left-arm:after {
+  content: "";
+  background-color: #666;
+  width: 20px;
+  height: 1px;
+  display: block;
+  border-radius: 1px;
+  -webkit-transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  -webkit-transform-origin: right center;
+          transform-origin: right center;
+  z-index: -1;
+}
+
+body .blogs .blog .arrowUp .right-arm {
+  position: absolute;
+  z-index: 1;
+  background-color: transparent;
+  top: 19px;
+  left: 17px;
+  width: 20px;
+  display: block;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  border-radius: 2px;
+}
+
+body .blogs .blog .arrowUp .right-arm:after {
+  content: "";
+  background-color: #666;
+  width: 20px;
+  height: 1px;
+  display: block;
+  border-radius: 1px;
+  -webkit-transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  -webkit-transform-origin: left center;
+          transform-origin: left center;
+  z-index: -1;
+}
+
+body .blogs .blog .arrowUp .arrow-up:hover {
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+
+body .blogs .blog .arrowUp .arrow-up:hover .left-arm:after {
+  -webkit-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+
+body .blogs .blog .arrowUp .arrow-up:hover .right-arm:after {
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
+body .blogs .blog .arrowUp .arrow-up:hover .arrow-slide {
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-transform: translateY(200%);
+          transform: translateY(200%);
+}
+
+body .blogs .blog .arrowDown {
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+body .blogs .blog .arrowDown .arrow-up {
+  height: 40px;
+  width: 40px;
+  display: block;
+  border: 1px solid #666;
+  position: relative;
+  cursor: pointer;
+  -webkit-transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  overflow: hidden;
+}
+
+body .blogs .blog .arrowDown .arrow-slide {
+  left: 0;
+  top: -100%;
+  width: 100%;
+  height: 100%;
+  background: #666;
+  position: absolute;
+  display: block;
+  z-index: 0;
+}
+
+body .blogs .blog .arrowDown .left-arm {
+  position: absolute;
+  z-index: 1;
+  background-color: transparent;
+  top: 19px;
+  left: 3px;
+  width: 20px;
+  display: block;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+body .blogs .blog .arrowDown .left-arm:after {
+  content: "";
+  background-color: #666;
+  width: 20px;
+  height: 1px;
+  display: block;
+  border-radius: 1px;
+  -webkit-transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  -webkit-transform-origin: right center;
+          transform-origin: right center;
+  z-index: -1;
+}
+
+body .blogs .blog .arrowDown .right-arm {
+  position: absolute;
+  z-index: 1;
+  background-color: transparent;
+  top: 19px;
+  left: 17px;
+  width: 20px;
+  display: block;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  border-radius: 2px;
+}
+
+body .blogs .blog .arrowDown .right-arm:after {
+  content: "";
+  background-color: #666;
+  width: 20px;
+  height: 1px;
+  display: block;
+  border-radius: 1px;
+  -webkit-transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+  -webkit-transform-origin: left center;
+          transform-origin: left center;
+  z-index: -1;
+}
+
+body .blogs .blog .arrowDown .arrow-up:hover {
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+
+body .blogs .blog .arrowDown .arrow-up:hover .left-arm:after {
+  -webkit-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+
+body .blogs .blog .arrowDown .arrow-up:hover .right-arm:after {
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
+body .blogs .blog .arrowDown .arrow-up:hover .arrow-slide {
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-transform: translateY(200%);
+          transform: translateY(200%);
+}
+
+body .blogs .blog video {
+  position: absolute;
+  top: 48%;
   -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
   width: 100vw;
