--- a/public/styles.scss
+++ b/public/styles.scss
@@ -165,10 +165,12 @@
 }
 body {
 	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
 	.splash {
 		animation-name: zIndex2-1;
 		animation-fill-mode: forwards;
-		animation-delay: 17s;
+		animation-delay: 10s;
 		animation-duration: 0s;
 		height: 100vh;
 		position: absolute;
@@ -188,7 +190,7 @@ body {
 			position: fixed;
 			z-index: 2;
 			animation-fill-mode: forwards;
-			animation-delay: 13s;
+			animation-delay: 9s;
 			animation-name: opacityToZero;
 			animation-duration: 0s;
 		}
@@ -196,7 +198,7 @@ body {
 			z-index: 3;
 			background-color: rgb(255, 255, 255);
 			animation-name: opacityToZero;
-			animation-delay: 13s;
+			animation-delay: 9s;
 			animation-fill-mode: forwards;
 			animation-duration: 0s;
 			height: 100vh;
@@ -228,8 +230,8 @@ body {
 			background-color: white;
 			mix-blend-mode: screen;
 			animation-name: white2black, black2white, opacityToZero;
-			animation-duration: 4s, 4s, 4s;
-			animation-delay: 2s, 9s, 13s;
+			animation-duration: 3s, 3s, 3s;
+			animation-delay: 1s, 6s, 9s;
 			animation-fill-mode: forwards, forwards;
 		}
 	}
@@ -238,6 +240,7 @@ body {
 		top: 0px;
 		z-index: 1;
 		background: rgb(34, 36, 34);
+		height: 0%;
 		font-size: 30px;
 		font-family: "Century Gothic", "Lato", sans-serif;
 		ul {
@@ -246,6 +249,7 @@ body {
 			display: flex;
 			a {
 				li {
+					text-shadow: 0px 3px 3px rgb(0, 0, 0);
 					color: rgb(158, 172, 170);
 					text-align: center;
 					padding: 5px;
@@ -282,7 +286,9 @@ body {
 						transform: translateX(-100px) skewX(-15deg);
 					}
 					&:hover {
-						background: #385a3e;
+						text-shadow: none;
+
+						background: #455047;
 						cursor: pointer;
 						&:before {
 							transform: translateX(300px) skewX(-15deg);
@@ -304,13 +310,191 @@ body {
 		overflow-y: scroll;
 		height: 100vh;
 		.blog {
+			// Up Arrow Swipe
+			.arrowUp {
+				z-index: 1;
+				display: flex;
+				justify-content: right;
+				position: relative;
+				.arrow-up {
+					height: 40px;
+					width: 40px;
+					display: block;
+					border: 1px solid #666;
+					position: relative;
+					cursor: pointer;
+					transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+					overflow: hidden;
+				}
+
+				.arrow-slide {
+					left: 0;
+					top: -100%;
+					width: 100%;
+					height: 100%;
+					background: #666;
+					position: absolute;
+					display: block;
+					z-index: 0;
+				}
+
+				.left-arm {
+					position: absolute;
+					z-index: 1;
+					background-color: transparent;
+					top: 19px;
+					left: 3px;
+					width: 20px;
+					display: block;
+					transform: rotate(-45deg);
+					&:after {
+						content: "";
+						background-color: #666;
+						width: 20px;
+						height: 1px;
+						display: block;
+						border-radius: 1px;
+						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+						transform-origin: right center;
+						z-index: -1;
+					}
+				}
+
+				.right-arm {
+					position: absolute;
+					z-index: 1;
+					background-color: transparent;
+					top: 19px;
+					left: 17px;
+					width: 20px;
+					display: block;
+					transform: rotate(45deg);
+					border-radius: 2px;
+					&:after {
+						content: "";
+						background-color: #666;
+						width: 20px;
+						height: 1px;
+						display: block;
+						border-radius: 1px;
+						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+						transform-origin: left center;
+						z-index: -1;
+					}
+				}
+
+				.arrow-up:hover {
+					transition: all 0.1s;
+					.left-arm:after {
+						transform: rotate(-10deg);
+					}
+					.right-arm:after {
+						transform: rotate(10deg);
+					}
+					.arrow-slide {
+						transition: all 0.4s ease-in-out;
+						transform: translateY(200%);
+					}
+				}
+			}
+			.arrowDown {
+				z-index: 1;
+				display: flex;
+				justify-content: right;
+				position: absolute;
+				right: 0;
+				bottom: 0;
+				.arrow-up {
+					height: 40px;
+					width: 40px;
+					display: block;
+					border: 1px solid #666;
+					position: relative;
+					cursor: pointer;
+					transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+					overflow: hidden;
+				}
+
+				.arrow-slide {
+					left: 0;
+					top: -100%;
+					width: 100%;
+					height: 100%;
+					background: #666;
+					position: absolute;
+					display: block;
+					z-index: 0;
+				}
+
+				.left-arm {
+					position: absolute;
+					z-index: 1;
+					background-color: transparent;
+					top: 19px;
+					left: 3px;
+					width: 20px;
+					display: block;
+					transform: rotate(-45deg);
+					&:after {
+						content: "";
+						background-color: #666;
+						width: 20px;
+						height: 1px;
+						display: block;
+						border-radius: 1px;
+						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+						transform-origin: right center;
+						z-index: -1;
+					}
+				}
+
+				.right-arm {
+					position: absolute;
+					z-index: 1;
+					background-color: transparent;
+					top: 19px;
+					left: 17px;
+					width: 20px;
+					display: block;
+					transform: rotate(45deg);
+					border-radius: 2px;
+					&:after {
+						content: "";
+						background-color: #666;
+						width: 20px;
+						height: 1px;
+						display: block;
+						border-radius: 1px;
+						transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 1.5);
+						transform-origin: left center;
+						z-index: -1;
+					}
+				}
+
+				.arrow-up:hover {
+					transition: all 0.1s;
+					.left-arm:after {
+						transform: rotate(-10deg);
+					}
+					.right-arm:after {
+						transform: rotate(10deg);
+					}
+					.arrow-slide {
+						transition: all 0.4s ease-in-out;
+						transform: translateY(200%);
+					}
+				}
+			}
+
 			scroll-snap-align: start;
 			background: rgb(0, 0, 0);
 			position: relative;
+			top: 50%;
+			transform: translate(0, -50%);
 			height: 100vh;
 			video {
-				position: relative;
-				top: 50%;
+				position: absolute;
+				top: 48%;
 				transform: translate(0, -50%);
 				width: 100vw;
 				filter: brightness(80%);
