--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html lang="en">
 	<%- include("./partials/head.ejs") %>
 	<body>
+		<%- include("./partials/splash.ejs") %>
 		<%- include("./partials/nav.ejs") %>
 		<div class="blogs">
 			<% if (blogs.length > 0) { %> <% blogs.forEach((blog,index,array) => { %>
