--- a/views/details.ejs
+++ b/views/details.ejs
@@ -3,15 +3,19 @@
 
 <body>
   <%- include("./partials/nav.ejs") %>
+  <div class="details">
 
-  <div class="details content">
-    <h2><%= blog.title %></h2>
+    <video autoplay playsinline muted loop preload poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/oceanshot.jpg">
+      <source src="<%= blog.videoURL %>" />
+    </video>
+  
     <div class="content">
-      <p><%= blog.body %></p>
+      <h2><%= blog.title %></h2>
+      <p><%- blog.body %></p>
+      <a class="delete" data-doc="<%= blog._id %>">
+        <i class="bi bi-trash bi-5x"></i>
+      </a>
     </div>
-    <a class="delete" data-doc="<%= blog._id %>">
-      <img src="/trashcan.svg" alt="delete icon">
-    </a>
   </div>
 
   <%- include("./partials/footer.ejs") %>
